[gd_scene load_steps=2 format=3 uid="uid://cbhbm36r5gevn"]

[ext_resource type="Script" uid="uid://dtee61lgfjnnk" path="res://Scene/BattleMenu.gd" id="1_y6mjl"]

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 3
layer = 100
script = ExtResource("1_y6mjl")

[node name="Panel" type="Panel" parent="."]
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 461.0
offset_top = 215.0
offset_right = 708.0
offset_bottom = 448.0

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "TItle"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActionButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "------------"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="Panel/VBoxContainer/ActionButton" to="." method="_on_action_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
